--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 	<head>
 		<link href="style.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-        <title>Daisy Ondwari</title>
+        <title>Shadrack Kiprono</title>
 	</head>
 
 	<body>
 		<header id="header">
 			<!-- resume header with your name and title -->
-			<h1>Daisy Ondwari</h1>
+			<h1>Shadrack Kiprono</h1>
 			<hr>
 			Kabarak University 
 			<hr>
@@ -17,18 +17,17 @@
 			<article id="mainLeft">
 				<section>
 					<h2>CONTACT</h2>
-					<!-- contact info including social media -->
                     <p>
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <a href="mailto:username@domain.top-level domain">daisyn@kabarak.ac.ke, daisyondwari@gmail.com</a>
+                        <a href="mailto:username@domain.top-level domain">shadrackkiprono@kabarak.ac.ke, shaddykiprono55@gmail.com</a>
                     </p>
                     <p>
                         <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="github.com/yourGitHubUsername">@daisyondwari</a>
+                        <a href="github.com/yourGitHubUsername">https://github.com/39928379</a>
                     </p>
                     <p>
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <a href="linkedin.com/yourLinkedInUsername">Write your username here!</a>
+                        <a href="linkedin.com/yourLinkedInUsername">https://www.linkedin.com/in/shadrack-kiprono-3aa712337/</a>
                     </p>
 				</section>
 				<section>
@@ -43,13 +42,13 @@
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
-					<!-- your education -->
+
                     <h3>Msc. Informationation Technology</h3>
                     <p>
-                        Bharathidasan University-India
+                        University of Cambridge
                     </p>
                     <p>
-                        2010 - 2013
+                        2017 - 2022
                     </p>
 				</section>            
 			</article>
@@ -57,30 +56,30 @@
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
-                    <p>Write a blurb about yourself!</p>
+                    <p>Hardworking and selfdriven in Task evaluation with minimum supervisions </p>
 				</section>
 				<section>
 					<h2>WORK EXPERIENCE</h2>
-					<!-- your work experience -->
-                    <h3>Job Title</h3>
+					<programming experience and familiarity with foundational programming languages>
+                    <h3>Cybersecurity Analyst</h3>
                     <p>
-                        Organization Name Goes Here | Start Month – End Month
+                        wHTa Networks | 04 – 12
                     </p>
                     <ul>
-                            <li>Task 1 - Write what you did!</li>
-                            <li>Task 2 - Write what you did!</li>
-                            <li>Write the outcomes/impact of your contribution</li>
+                            <li>Task 1 - Cybersecurity Analyst</li>
+                            <li>Task 2 - Install and operate firewalls, encryption programs, and other security software</li>
+                            <li>assesses the potential consequences of cyber threats, aiding businesses in understanding risks to their operations and reputation</li>
                             
                     </ul>
 
-                    <h3>Job Title 2</h3>
+                    <h3>IT & NETWORKING SPECIALIST</h3>
                     <p>
-                        Organization Name Goes Here | Start Month – End Month
+                        Jumbo AAA Holdings Limited | 05 –10
                     </p>
                     <ul>
-                            <li>Task 1 - Write what you did!</li>
-                            <li>Task 2 - Write what you did!</li>
-                            <li>Write the outcomes/impact of your contribution</li>
+                            <li>Task 1 - Install and configure wireless networking equipment</li>
+                            <li>Task 2 -Manage network security</li>
+                            <li> Effecttive information sharing</li>
                             
                     </ul>
 				</section>
