--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 	<head>
 		<link href="style.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-        <title>Daisy Ondwari</title>
+        <title>Shadrack Kiprono</title>
 	</head>
 
 	<body>
 		<header id="header">
 			<!-- resume header with your name and title -->
-			<h1>Daisy Ondwari</h1>
+			<h1>Shadrack Kiprono</h1>
 			<hr>
 			Kabarak University 
 			<hr>
@@ -20,15 +20,15 @@
 					<!-- contact info including social media -->
                     <p>
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <a href="mailto:username@domain.top-level domain">daisyn@kabarak.ac.ke, daisyondwari@gmail.com</a>
+                        <a href="mailto:username@domain.top-level domain">shadrackkiprono@kabarak.ac.ke, shaddykiprono55@gmail.com</a>
                     </p>
                     <p>
                         <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="github.com/yourGitHubUsername">@daisyondwari</a>
+                        <a href="github.com/yourGitHubUsername">https://github.com/39928379</a>
                     </p>
                     <p>
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <a href="linkedin.com/yourLinkedInUsername">Write your username here!</a>
+                        <a href="linkedin.com/yourLinkedInUsername">www.linkedin.com/in/shadrack-kiprono-3aa712337</a>
                     </p>
 				</section>
 				<section>
@@ -45,8 +45,7 @@
 					<h2>EDUCATION</h2>
 					<!-- your education -->
                     <h3>Msc. Informationation Technology</h3>
-                    <p>
-                        Bharathidasan University-India
+                    <p>Kabarak University-India
                     </p>
                     <p>
                         2010 - 2013
@@ -57,30 +56,30 @@
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
-                    <p>Write a blurb about yourself!</p>
+                    <p>Hardworking and self driven in Task evaluation with minimum supervisions • proficient in time management skills</p>
 				</section>
 				<section>
 					<h2>WORK EXPERIENCE</h2>
 					<!-- your work experience -->
                     <h3>Job Title</h3>
                     <p>
-                        Organization Name Goes Here | Start Month – End Month
+                        Enterprise Tech|05–10
                     </p>
                     <ul>
-                            <li>Task 1 - Write what you did!</li>
-                            <li>Task 2 - Write what you did!</li>
-                            <li>Write the outcomes/impact of your contribution</li>
+                            <li>Delivered workshops for elderly adults on the use of computers and smartphones</li>
+                            <li>Manage and improve team operations with diplomatic and resourceful leadership</li>
+                            <li>Streamlined workflow by consolidating lengthy processes and redundant documentation which resulted in more effective and timely completion of </li>
                             
                     </ul>
 
                     <h3>Job Title 2</h3>
                     <p>
-                        Organization Name Goes Here | Start Month – End Month
+                      ShaTech Agency - Nakuru, Kenya | 04– 11
                     </p>
                     <ul>
-                            <li>Task 1 - Write what you did!</li>
-                            <li>Task 2 - Write what you did!</li>
-                            <li>Write the outcomes/impact of your contribution</li>
+                            <li></li>
+                            <li>Equipment maintenance</li>
+                            <li>new Equipment maintenance</li>
                             
                     </ul>
 				</section>
