--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 	<head>
 		<link href="style.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-        <title>Daisy Ondwari</title>
+        <title>Shadrack Kiprono</title>
 	</head>
 
 	<body>
 		<header id="header">
 			<!-- resume header with your name and title -->
-			<h1>Daisy Ondwari</h1>
+			<h1>Shadrack Kiprono</h1>
 			<hr>
 			Kabarak University 
 			<hr>
@@ -20,36 +20,36 @@
 					<!-- contact info including social media -->
                     <p>
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <a href="mailto:username@domain.top-level domain">daisyn@kabarak.ac.ke, daisyondwari@gmail.com</a>
+                        <a href="mailto:username@domain.top-level domain">shadrackkiprono@kabarak.ac.ke, shaddykiprono55@gmail.com</a>
                     </p>
                     <p>
                         <i class="fab fa-github" aria-hidden="true"></i>
-                        <a href="github.com/yourGitHubUsername">@daisyondwari</a>
+                        <a href="github.com/yourGitHubUsername">@39928379</a>
                     </p>
                     <p>
                         <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <a href="linkedin.com/yourLinkedInUsername">Write your username here!</a>
+                        <a href="linkedin.com/yourLinkedInUsername">https://www.linkedin.com/in/shadrack-kiprono-3aa712337</a>
                     </p>
 				</section>
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills -->
                     <ul>
-                        <li>Machine Learning</li>
-                        <li>Python Programming </li>
+                        <li>python programming</li>
+                        <li>Cyber security analysis</li>
                         <li>Web Application Development</li>
-                        <li>Skill 4!</li>
+                        <li>Network administration</li>
                     </ul>
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
 					<!-- your education -->
-                    <h3>Msc. Informationation Technology</h3>
+                    <h3>Bsc. Informationation Technology</h3>
                     <p>
-                        Bharathidasan University-India
+                        Kabarak University-Kenya
                     </p>
                     <p>
-                        2010 - 2013
+                        2021 - 2025
                     </p>
 				</section>            
 			</article>
@@ -57,30 +57,30 @@
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
-                    <p>Write a blurb about yourself!</p>
+                    <p>focused on self-improvement and balancing multiple goals, including fitness, meditation, and reading as part of your morning routine</p>
 				</section>
 				<section>
 					<h2>WORK EXPERIENCE</h2>
 					<!-- your work experience -->
-                    <h3>Job Title</h3>
+                    <h3>Cyber Security Analyst</h3>
                     <p>
-                        Organization Name Goes Here | Start Month – End Month
+                        Jubilee Insurance  | March–August
                     </p>
                     <ul>
-                            <li>Task 1 - Write what you did!</li>
-                            <li>Task 2 - Write what you did!</li>
-                            <li>Write the outcomes/impact of your contribution</li>
+                            <li>Task 1 - Install and operate firewalls, encryption programs, and other security software</li>
+                            <li>Task 2 - Investigate incidents and respond to events in real time</li>
+                            <li>operational stability, financial health, and the overall resilience of the company against evolving cyber threats</li>
                             
                     </ul>
 
-                    <h3>Job Title 2</h3>
+                    <h3>Network administrator</h3>
                     <p>
-                        Organization Name Goes Here | Start Month – End Month
+                        NCBA GROUP | January– April 
                     </p>
                     <ul>
-                            <li>Task 1 - Write what you did!</li>
-                            <li>Task 2 - Write what you did!</li>
-                            <li>Write the outcomes/impact of your contribution</li>
+                            <li>Task 1 - assembling new systems</li>
+                            <li>Task 2 - budgeting for equipment and assembly costs</li>
+                            <li>making sure that computer hardware and network infrastructure related to an organization's data network are effectively maintained</li>
                             
                     </ul>
 				</section>
